@@ -560,18 +560,12 @@ convert_expr (tree exp, Type *etype, Type *totype)
 
     case Tnull:
       /* Casting from typeof(null) is represented as all zeros.  */
-      if (tbtype->ty == Tarray)
-	{
-	  tree ptrtype = build_ctype (tbtype->nextOf ()->pointerTo ());
-	  return d_array_value (build_ctype (totype), size_int (0),
-				build_nop (ptrtype, exp));
-	}
-      else if (tbtype->ty == Taarray)
-	return build_constructor (build_ctype (totype), NULL);
-      else if (tbtype->ty == Tdelegate)
-	return build_delegate_cst (exp, null_pointer_node, totype);
+      result = build_typeof_null_value (totype);
 
-      return build_zero_cst (build_ctype (totype));
+      /* Make sure the expression is still evaluated if necessary.  */
+      if (TREE_SIDE_EFFECTS (exp))
+	result = compound_expr (exp, result);
+      break;
 
     case Tvector:
       if (tbtype->ty == Tsarray)
