@@ -1,3 +1,10 @@
+2019-01-16  Iain Buclaw  <ibuclaw@gdcproject.org>
+
+	* d-codegen.cc (build_typeof_null_value): New function.
+	* d-tree.h (build_typeof_null_value): Declare.
+	* d-convert.cc (convert_expr): Use build_typeof_null_value.
+	* expr.cc (ExprVisitor::visit(NullExp)): Likewise.
+
 2019-01-15  Richard Sandiford  <richard.sandiford@arm.com>
 
 	PR inline-asm/52813
